@@ -17,7 +17,7 @@
     <properties>
         <java.version>21</java.version>
         <cucumber.version>7.18.0</cucumber.version>
-        <argLine></argLine>
+        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
     </properties>
 
     <dependencies>
